@@ -3,7 +3,7 @@
 	"version": "0.0.86",
 	"title": "Mobile Factory",
 	"author": "Mugiwaxar",
-	"dependencies": ["base >= 0.17", "Mobile_Factory_Graphics >= 0.0.1"],
+	"dependencies": ["base >= 0.17", "Mobile_Factory_Graphics >= 0.0.2"],
 	"description": "A mod with many features where you can make a Mobile Factory, build you base inside and travel around the world. The mod contain a way to transfer items via the Circuit Network, some nice way to mine Ore or extract Fluid, many new chemical elements, Jets who will work for you, Data Storage of Items, and many more ...",
 	"factorio_version": "0.17",
 	"homepage":"ttps://mobile-factory.fandom.com/wiki/Mobile_Factory_Wiki"
